service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    qcloud-app: graf
  name: graf
  namespace: default
spec:
  ports:
    - name: tcp-80-80
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    qcloud-app: graf
  type: ClusterIP
